<resources>
    <string name="app_name">Quizable</string>
    <string name="developed_by">Developed by ITHS</string>
    <string name="profile">Profile</string>
    <string name="result">Result</string>
    <string name="textview_about">"The game is about responding if a statement is true or false, but you must think reversed.\n\nYou can also add your own statements and choose wich category it should be added to.\n\nYou have five seconds to answer and the faster you answer, the more points you will get. You have to think fast, if you don't answer before the time runs out, you will get minus points.\n\nExample of a statement:\n\"Sweden is a country\"\nThat is true, therefore, the correct answer is false because you have to think reversed.\n\nGood luck!  "</string>
    <string name="points">"Points"</string>

    <!--Buttons-->
    <string name="handle_statements">Handle statements</string>
    <string name="add">Add</string>
    <string name="go_back">Back</string>
    <string name="manage_statements">Manage statements</string>
    <string name="isTrue">True</string>
    <string name="isFalse">False</string>

    <!--Menu-->
    <string name="multiplayer">Multiplayer</string>
    <string name="highscore">Highscore</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="game_menu">Game Menu</string>
    <string name="play">Play</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>

    <!--Categories-->
    <string name="music">Music</string>
    <string name="sport">Sport</string>
    <string name="own_statements">Own statements</string>
    <string name="geography">Geography</string>
    <string name="science">Science</string>
    <string name="games">Games</string>
    <string name="culture">Culture</string>

    <string name="all_categories">All categories</string>
    <string name="choose_category">Choose category</string>
    <string name="isTruee">True</string>

    <!--Arrays-->
    <string-array name="top5">
        <item>1.Alvar</item>
        <item>2.Ibrahim</item>
        <item>3.Daniel</item>
        <item>4.Robert</item>
        <item>5.Hanna</item>
        <item>6.Knape</item>
    </string-array>

    <string name="create_statement">Create Statement</string>
    <string name="add_statement">Add text to your statement</string>
    <string name="statement_true_false">Choose if your statement is \"true\" or \"false\"</string>
    <string name="food">Food</string>
    <string name="mat">mat</string>
    <string name="save">Save</string>
    <string name="play_again">Play again</string>
    <string name="back_to_main_menu">Main menu</string>
    <string name="edit_category">Edit category</string>
    <string name="edit_statement">Edit statement</string>
    <string name="Edit">Edit</string>
    <string name="amount_of_statements">Amount of statements:</string>
    <string name="choose_amount_of_statements">Amount of statements</string>
    <string name="chosen_category">Category:</string>
    <string name="go">GO</string>
    <string name="own">Own</string>
    <string name="logo">logo</string>
    <string name="sound_on_off_button">Sound on/off button</string>
    <string name="true_statement">True</string>
    <string name="false_statement">False</string>
    <string name="insert_name_hint">Insert name</string>
    <string name="get_ready">Get Ready</string>
    <string name="statements">Statements</string>
    <string name="statements_colon">Statements:</string>
    <string name="points_colon">Points:</string>
    <string name="opposite">Answer the opposite</string>
    <string name="p1_get_ready">Player 1 Get ready!</string>
    <string name="p2_get_ready">Player 2 Get ready!</string>
    <string name="correct_answers">Correct answers</string>
    <string name="delete_profile">Delete profile</string>
    <string name="create_profile">Create profile</string>
    <string name="add_profile">Add profile</string>
    <string name="sms">Send a message</string>
    <string name="send">Send</string>
    <string name="enter_nr">Enter phone number</string>
    <string name="enter_message">Enter message</string>
    <string name="expansion">Expansion</string>
    <string name="choose_player">Choose player</string>
    <string name="ready">ready</string>
    <string name="are_you_ready">Are you ready?</string>
    <string name="expansion_christmas">Expansion Christmas</string>
    <string name="max_number_of_letters_10">Max number of letters: 10</string>

</resources>
