<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context="case2.iths.com.QuizGame.CategoryWindowActivity">

    <TextView
        android:id="@+id/top_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lobster_two_bold"
        android:text="@string/choose_category"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/button_sport"
        android:onClick="categoryButtonPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/sport"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button_music"
        app:layout_constraintTop_toBottomOf="@+id/top_text" />

    <TextView
        android:text="@string/sport"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/button_sport"
        app:layout_constraintRight_toRightOf="@+id/button_sport"
        app:layout_constraintTop_toBottomOf="@+id/button_sport"/>

    <ImageView
        android:id="@+id/button_music"
        android:onClick="categoryButtonPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/music"
        app:layout_constraintLeft_toRightOf="@+id/button_sport"
        app:layout_constraintRight_toLeftOf="@+id/button_food"
        app:layout_constraintTop_toBottomOf="@+id/top_text" />

    <TextView
        android:text="@string/music"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/button_music"
        app:layout_constraintRight_toRightOf="@+id/button_music"
        app:layout_constraintTop_toBottomOf="@+id/button_music"/>

    <ImageView
        android:id="@+id/button_food"
        android:onClick="categoryButtonPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/food"
        app:layout_constraintLeft_toRightOf="@+id/button_music"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_text" />

    <TextView
        android:text="@string/food"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/button_food"
        app:layout_constraintRight_toRightOf="@+id/button_food"
        app:layout_constraintTop_toBottomOf="@+id/button_food"/>

    <ImageView
        android:id="@+id/button_science"
        android:onClick="categoryButtonPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/science"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/button_geography"
        app:layout_constraintTop_toBottomOf="@+id/button_sport" />

    <TextView
        android:text="@string/science"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/button_science"
        app:layout_constraintRight_toRightOf="@+id/button_science"
        app:layout_constraintTop_toBottomOf="@+id/button_science"/>

    <ImageView
        android:id="@+id/button_geography"
        android:onClick="categoryButtonPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/geography"
        app:layout_constraintLeft_toRightOf="@+id/button_science"
        app:layout_constraintRight_toLeftOf="@+id/button_games"
        app:layout_constraintTop_toBottomOf="@+id/button_sport" />

    <TextView
        android:text="@string/geography"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/button_geography"
        app:layout_constraintRight_toRightOf="@+id/button_geography"
        app:layout_constraintTop_toBottomOf="@+id/button_geography"/>

    <ImageView
        android:id="@+id/button_games"
        android:onClick="categoryButtonPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/games"
        app:layout_constraintLeft_toRightOf="@+id/button_geography"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sport" />

    <TextView
        android:text="@string/games"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/button_games"
        app:layout_constraintRight_toRightOf="@+id/button_games"
        app:layout_constraintTop_toBottomOf="@+id/button_games"/>

    <ImageView
        android:id="@+id/button_own_questions"
        android:onClick="categoryButtonPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:srcCompat="@drawable/ic_build_24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_geography" />

    <TextView
        android:text="@string/own_statements"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/button_own_questions"
        app:layout_constraintRight_toRightOf="@+id/button_own_questions"
        app:layout_constraintTop_toBottomOf="@+id/button_own_questions"/>

    <TextView
        android:id="@+id/developed_by_text"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/developed_by"
        android:textColor="@color/ButtonBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
